--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "@angular/compiler": "^20.3.0",
     "@angular/core": "^20.3.0",
     "@angular/forms": "^20.3.0",
+    "@angular/localize": "^20.3.10",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@tailwindcss/postcss": "^4.1.14",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.13.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
