--- a/package.json
+++ b/package.json
@@ -22,27 +22,32 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.3.10",
-    "@angular/compiler": "^20.3.10",
-    "@angular/core": "^20.3.10",
-    "@angular/forms": "^20.3.10",
-    "@angular/localize": "^20.3.10",
-    "@angular/platform-browser": "^20.3.10",
-    "@angular/router": "^20.3.10",
+    "@angular/cdk": "^20.2.14",
+    "@angular/common": "^20.3.13",
+    "@angular/compiler": "^20.3.13",
+    "@angular/core": "^20.3.13",
+    "@angular/forms": "^20.3.13",
+    "@angular/localize": "^20.3.13",
+    "@angular/material": "^20.2.14",
+    "@angular/platform-browser": "^20.3.13",
+    "@angular/router": "^20.3.13",
     "@ng-bootstrap/ng-bootstrap": "^19.0.1",
     "@tailwindcss/postcss": "^4.1.14",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.13.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular/build": "^20.3.10",
     "@angular/cli": "^20.3.10",
-    "@angular/compiler-cli": "^20.3.10",
+    "@angular/compiler-cli": "^20.3.13",
     "@types/jasmine": "~5.1.0",
+    "@types/xlsx": "^0.0.35",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.9.7",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
